Activity : - Add HyperLink - Add List Menu

--- a/web.html
+++ b/web.html
@@ -2,35 +2,48 @@
 <html>
 <head>
 	<title>PUBG</title>
+	<style type="text/css">
+		td{
+			color: yellowgreen;
+		}
+		#selektorID{
+			color: #0f0;
+		}
+		.selektorClass{
+			color: #d4d4d4;
+			font-size: 1000px;
+		}
+	</style>
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body bgcolor="#231F20">
 	<table width="100%"> 
 		<tr bgcolor="#0A0809">
-			<td align="center" width="100">
-				<img src="pubg.png"/>
+			<td align="center" width="100"><a href="http://www.facebook.com">
+				<img src="pubg.png"/></a>
 			</td>
 			<td align="left" width="100">
-				<font color="#F5C11F">PUBG PC</font>
-				<font color="#FFFFFF"><p>OFFICIAL PUBG ON PC</font>
+				PUBG PC
+				<p>OFFICIAL PUBG ON PC
 			</td>
 			<td align="center" width="100">
-				<font color="#FFFFFF">HOME</font>
+				<a href="Menu.html" target="_blank">HOME</a>
 			</td>
 			<td align="center" width="100">
-				<font color="#F5C11F">NEWS</font>
+				<a href="http://www.google.com" target="_blank">NEWS</a>
 			</td>
 			<td align="center" width="100">
-				<font color="#FFFFFF">MEDIA</font>
+				MEDIA
 			</td>
 			<td align="center" width="100">
-				<font color="#FFFFFF">PWK</font>
+				PWK
 			</td>
 			<td align="center" width="100">
-				<font color="#FFFFFF">PAYMENT</font>
+				PAYMENT
 			</td>
 			<td align="center" width="50">
 				<img src="flag.png"/>
-				<font color="#F5C11F">EN</font>
+				EN
 			</td>
 		</tr >
 		<tr>
